--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 
 	<title>CSDB</title>
 
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<link rel="stylesheet" href="/fonts/material-icons.css">
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/build/base.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
