--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="light">
+<html lang="en" data-theme="light">
 
 <head>
 	<meta charset='utf-8'>
@@ -11,6 +11,13 @@
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/build/base.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
+
+	<script>
+		const theme = localStorage.getItem('csdb/settings/theme');
+		if (theme) {
+			document.documentElement.setAttribute('data-theme', theme);
+		}		
+	</script>
 
 	<script defer src='/build/bundle.js'></script>
 </head>
