--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,9 @@
 		}		
 	</script>
 
+	<script data-goatcounter="https://cs-idb.goatcounter.com/count"
+	async src="//gc.zgo.at/count.js"></script>
+
 	<script defer src='/build/bundle.js'></script>
 </head>
 
